openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ocp-java-ubi8
  labels:
    app: ocp-java-ubi8
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: ocp-java-ubi8
    deployment: ocp-java-ubi8
  type: ClusterIP
  sessionAffinity: None
